--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "snapsvg": "^0.5.1",
+    "snapsvg-cjs": "^0.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
